--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title_left    : "Synthetic"
 title_right   : "Tulpas" # default: ""
 description   : "A collection of notes regarding pharmacology, new-tech, open-source projects and personal thoughts."
 keywords      : "Jekyll, theme, minimalist, technology, cyberpunk, pharmacology, open-source"
-url           : https://github.com/VerifiedGruber/minimal_blog/ # site url
+url           : https://verifiedgruber.github.io/minimal_blog/ # site url
 baseurl       : "" # apply repo name like "/myproject" if used under gh-pages branch, else (under master branch) just leave empty/blank
 cover         : "" # image uri like logo/cover image for site seo
 
